--- a/source/sass/democss.scss
+++ b/source/sass/democss.scss
@@ -15,6 +15,39 @@ body {
   overflow-x: hidden;
 }
 
+h2 {
+  text-align: center;
+}
+
+.pageheader {
+  padding: 0.5rem;
+  color: $color-text;
+  background-color: $color-background;
+  text-align: center;
+  margin: 0 0 3rem;
+}
+
+.content {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.svgicon {
+  vertical-align: bottom;
+  margin: 0 0.5rem 0 0;
+}
+
+.calltoactionbar {
+  text-align: center;
+  margin: 0 0 2rem;
+
+  @media (min-width: 600px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
 .btn {
   width: auto;
   padding: 0.8rem 1rem;
@@ -34,5 +67,18 @@ body {
 
   &:active {
     background-color: darken($color-light, 8%);
+  }
+
+  &--cta {
+    margin: 0.5rem;
+    display: block;
+
+    @media (min-width: 600px) {
+      width: calc(50% - 1rem);
+
+      &:first-child {
+        width: 100%;
+      }
+    }
   }
 }
