[FEATURE] add setup for colors

--- a/source/sass/cookiemessage.scss
+++ b/source/sass/cookiemessage.scss
@@ -4,7 +4,7 @@
   $this: &;
   position: fixed;
   padding: 1.5rem;
-  background-color: $color-background;
+  background-color: #000000;
   color: $color-text;
   transform: translate(0, 110%);
   transition: transform 0.5s ease-in;
