--- a/source/sass/democss.scss
+++ b/source/sass/democss.scss
@@ -116,6 +116,14 @@ h2 {
     }
   }
 
+  &__example {
+
+    &:before {
+      content: 'Example: ';
+      font-weight: bold;
+    }
+  }
+
   &__desc {
     font-style: italic;
   }
