--- a/source/sass/democss.scss
+++ b/source/sass/democss.scss
@@ -52,6 +52,18 @@ h2 {
   text-align: center;
 }
 
+.positionbuttons {
+  text-align: center;
+  margin: 0 auto 2rem;
+  max-width: 400px;
+
+  @media (min-width: 450px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
 .btn {
   width: auto;
   padding: 0.8rem 1rem;
@@ -83,6 +95,16 @@ h2 {
       &:first-child {
         width: 100%;
       }
+    }
+  }
+  
+  &--position {
+    display: block;
+    width: 100%;
+    margin: 0.5rem 0;
+
+    @media (min-width: 450px) {
+      width: 120px;
     }
   }
 }
