[FEATURE] add top elements

--- a/source/sass/cookiemessage.scss
+++ b/source/sass/cookiemessage.scss
@@ -6,12 +6,8 @@
   padding: 1.5rem;
   background-color: #000000;
   color: $color-text;
-  transform: translate(0, 110%);
+  visibility: hidden;
   transition: transform 0.5s ease-in;
-
-  &--loaded {
-    transform: translate(0, 0);
-  }
 
   &__link {
     color: currentColor;
@@ -31,6 +27,31 @@
     z-index: 100;
   }
 
+  &--pt {
+    transform: translate(0, -110%);
+  }
+
+  &--pb {
+    transform: translate(0, 110%);
+  }
+
+  &--t {
+    top: 0;
+    left: 0;
+    right: 0;
+
+  }
+
+  &--tr {
+    top: 1rem;
+    right: 1rem;
+  }
+
+  &--tl {
+    top: 1rem;
+    left: 1rem;
+  }
+
   &--b {
     bottom: 0;
     left: 0;
@@ -45,6 +66,11 @@
   &--bl {
     bottom: 1rem;
     left: 1rem;
+  }
+
+  &--loaded {
+    transform: translate(0, 0);
+    visibility: visible;
   }
 
   &__btn {
@@ -76,5 +102,5 @@
 }
 
 .cookiemessageloaded {
-  transition: padding-bottom 0.5s ease-in;
+  transition: padding-bottom 0.5s ease-in, padding-top 0.5s ease-in;
 }
